--- a/index.html
+++ b/index.html
@@ -362,8 +362,9 @@
               </div>
               <div class="content-test">
                 <p class="description lead">
-                  Pour télécharger ou voir mon tableau de compétences Cliquez Ici
+                  Pour télécharger mon Tableau de Compétences Cliquez <a href="tableaudecompetenceshanael.pdf" download="CVshanael">Ici</a>
                 </p>
+                <p class ="description lead" > pour le voir </p>
                 <span class="comit"><i class="fa fa-quote-right" ><a href="https://shanael25.github.io/portfolio1/tableaudecompetenceshanael.pdf" target="blank">.</a></i></span>
               </div>
             </div>
