--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
                   Pour télécharger mon Tableau de Compétences Cliquez <a href="tableaudecompetenceshanael.pdf" download="CVshanael">Ici</a>
                 </p>
                 <p class ="description lead" > pour le voir </p>
-                <span class="comit"><i class="fa fa-quote-right" ><a href="https://shanael25.github.io/portfolio1/tableaudecompetenceshanael.pdf" target="blank">.</a></i></span>
+                <span class="comit"><a href="https://shanael25.github.io/portfolio1/tableaudecompetenceshanael.pdf" target="blank"><i class="fa fa-quote-right" ></i></a></span>
               </div>
             </div>
             <div class="testimonial-box">
@@ -378,9 +378,7 @@
                   Pour télécharger mon cv Cliquez <a href="cvshanael.pdf" download="CVshanael">Ici</a>
                 </p>
                 <p class ="description lead" > pour le voir </p>
-                <span class="comit"><i class="fa fa-quote-right" > 
-                  <a href="https://shanael25.github.io/portfolio1/cvshanael.pdf" target="_blank">.</a>
-                  </i></span>
+                <span class="comit"><a href="https://shanael25.github.io/portfolio1/cvshanael.pdf" target="_blank"><i class="fa fa-quote-right" ></i></a></span>
               </div>
               
             </div>
