--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Libraries CSS Files -->
-  <link href="lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
   <link href="lib/animate/animate.min.css" rel="stylesheet">
   <link href="lib/ionicons/css/ionicons.min.css" rel="stylesheet">
   <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
@@ -365,7 +365,7 @@
                   Pour télécharger mon Tableau de Compétences Cliquez <a href="tableaudecompetenceshanael.pdf" download="CVshanael">Ici</a>
                 </p>
                 <p class ="description lead" > pour le voir </p>
-                <span class="comit"><a href="https://shanael25.github.io/portfolio1/tableaudecompetenceshanael.pdf" target="blank"><i class="fa fa-quote-right" ></i></a></span>
+                <span class="comit"><a href="https://shanael25.github.io/portfolio1/tableaudecompetenceshanael.pdf" target="blank"><i class="fa fa-check" ></i></a></span>
               </div>
             </div>
             <div class="testimonial-box">
@@ -378,7 +378,7 @@
                   Pour télécharger mon cv Cliquez <a href="cvshanael.pdf" download="CVshanael">Ici</a>
                 </p>
                 <p class ="description lead" > pour le voir </p>
-                <span class="comit"><a href="https://shanael25.github.io/portfolio1/cvshanael.pdf" target="_blank"><i class="fa fa-quote-right" ></i></a></span>
+                <span class="comit"><a href="https://shanael25.github.io/portfolio1/cvshanael.pdf" target="_blank"><i class="fa fa-check"></i></a></span>
               </div>
               
             </div>
