--- a/iloral.html
+++ b/iloral.html
@@ -152,7 +152,7 @@
                    
               <ul>
                 <li>
-                  <a href="#"data-lightbox="gallery-mf">Maquettes</a>
+                  <a href="en cours.png"data-lightbox="gallery-mf">Maquettes</a>
                 </li>
                 <li>
                   <a href="refonte.png"data-lightbox="gallery-mf">Refonte du logo</a>
@@ -178,16 +178,16 @@
                   <a >Dialoguer</a>
                 </li>
                 <li>
-                  <a href=""data-lightbox="gallery-mf">Elaboration du cahier des charges</a>
+                  <a href="en cours.png"data-lightbox="gallery-mf">Elaboration du cahier des charges</a>
                 </li>
                 <li>
-                  <a href="#"data-lightbox="gallery-mf">Faire des maquettes</a>
+                  <a href="en cours.png"data-lightbox="gallery-mf">Faire des maquettes</a>
                 </li>
                 <li>
                   <a href="https://total-valorisation.fr" target = blank >Réalisation du site</a>
                 </li>
                 <li>
-                  <a href="#"data-lightbox="gallery-mf">Création de signatures de mail</a>
+                  <a href="en cours.png"data-lightbox="gallery-mf">Création de signatures de mail</a>
                 </li>
               </ul>
             </div>
@@ -200,12 +200,12 @@
               <ul>
                 <p> Le stage m’a permis de faire mes premiers pas dans le monde du travail. </p>
                 <li>
-                  <a href="#">Premier point</a>
+                  <a >Premier point</a>
                   <p> Sur le plan technique, j’ai découvert tout un écosystème informatique. J’ai particulièrement apprécié d’y utiliser de nouveaux logiciel notamment WordPress. Mais j'ai aussi dû faire face à différentes difficultés qui représentent aujourd’hui autant d’enseignements très importants pour moi, notamment : - l’enjeu du cahier des charges
 -le rôle déterminant du chef du projet. </p>
                 </li>
                 <li>
-                  <a href="#">Deuxieme point</a>
+                  <a >Deuxieme point</a>
                    <p> Enfin, ce stage m’a permis de gagner en maturité professionnelle et a renforcé mon souhait de poursuivre mes études avec si possible un pied dans l’entreprise, en alternance. </p>
                 </li>
               </ul>
