--- a/pardess.html
+++ b/pardess.html
@@ -126,7 +126,7 @@
           </div>
           <div class="widget-sidebar">
             <h3 id="9" class="sidebar-title"> <a href="https://pardess.eu" target="blank">Refonte du site</h3></a>
-            <h3 id="10" class="sidebar-title">Maintenace du site</h3>
+            <h3 id="10" class="sidebar-title"><a href="StoreCommander (1).png" target="blank" >Maintenace du site</h3></a>
             <h3 id="11" class="sidebar-title"> <a href="maquettePardess.pdf" target="blank">Creation d'une appplication mobile</h3></a>
             
           </div>
