--- a/index.html
+++ b/index.html
@@ -196,23 +196,6 @@
     <h2 class="timeline-title"> Experience</h2>
     <ol class="timeline-list">
       <li class="timeline-li">
-        <p class="diplome">Pardess</p>
-        <span class="point"></span>
-        <p class="description">
-          Maintenance du site ,gestion du stock.Creation app mobile
-        </p>
-      </li>
-      <li class="timeline-li">
-        <p class="diplome">Mairie</p>
-        <span class="point"></span>
-        <p class="description">Excellente communication aussi bien avec les clients qu'en interne.Reception de courrier et son classement</p>
-      </li>
-      <li class="timeline-li">
-        <p class="diplome">Ioral</p>
-        <span class="point"></span>
-        <p class="description">Maintenance de site, creation de site, élaboration de cahier des charges et du mcd (modèle conceptuel des données)</p>
-      </li>
-      <li class="timeline-li">
         <p class="diplome">LILDVD</p>
           <span class="point"></span>
         <p class="description">Propose et adapte les animations aux enfants. Prépare et réalise des animations en se donnant les moyensnécessaires à la réalisation des projets concertés</p></li>
@@ -221,34 +204,47 @@
         <span class="point"></span>
         <p class="description">Propose et adapte les animations aux enfants. Prépare et réalise des animations en se donnant les moyensnécessaires à la réalisation des projets concertés</p>
       </li>
+       <li class="timeline-li">
+        <p class="diplome">Ioral</p>
+        <span class="point"></span>
+        <p class="description">Maintenance de site, creation de site, élaboration de cahier des charges et du mcd (modèle conceptuel des données)</p>
+      </li>
+      <li class="timeline-li">
+        <p class="diplome">La Mairie</p>
+        <span class="point"></span>
+        <p class="description">Excellente communication aussi bien avec les clients qu'en interne.Reception de courrier et son classement</p>
+      </li>
+      <li class="timeline-li">
+        <p class="diplome">Pardess</p>
+        <span class="point"></span>
+        <p class="description">
+          Maintenance du site ,gestion du stock.Creation app mobile
+        </p>
+      </li>
     </ol>
     <h2 class="timeline-title"> Formations</h2>
     <ol class="timeline-list">
       <li class="timeline-li">
-        <p class="diplome">BTS SIO</p>
-        <span class="point"></span>
-        <p class="description">
-          Option Slam
-        </p>
-      </li>
-      <li class="timeline-li">
-        <p class="diplome">Mooc</p>
-        <span class="point"></span>
-        <p class="description">Auto-formation Ansii RGPD</p>
+        <p class="diplome">Premiers secours</p>
+          <span class="point"></span>
+        <p class="description">Formation</p>
       </li>
       <li class="timeline-li">
         <p class="diplome">Bac S</p>
         <span class="point"></span>
         <p class="description">option mathematiques appliquées</p>
       </li>
-      <li class="timeline-li">
-        <p class="diplome">Premiers secours</p>
-          <span class="point"></span>
-        <p class="description">Formation</p></li>
-      <li class="timeline-li">
-      <p class="diplome">Beyahad</p>
+       <li class="timeline-li">
+        <p class="diplome">Mooc</p>
         <span class="point"></span>
-        <p class="description">Propose et adapte les animations aux enfants. Prépare et réalise des animations en se donnant les moyensnécessaires à la réalisation des projets concertés</p>
+        <p class="description">Auto-formation Ansii RGPD</p>
+      </li>
+      <li class="timeline-li">
+        <p class="diplome">BTS SIO</p>
+        <span class="point"></span>
+        <p class="description">
+          Option Slam
+        </p>
       </li>
     </ol>
     </div>
