--- a/iloral.html
+++ b/iloral.html
@@ -152,14 +152,14 @@
                    
               <ul>
                 <li>
-                  <a href="en cours.png"data-lightbox="gallery-mf">Maquettes</a>
+                  <a href="refontepage.png"data-lightbox="gallery-mf">Ancienne Page</a>
                 </li>
                 <li>
                   <a href="refonte.png"data-lightbox="gallery-mf">Refonte du logo</a>
                 </li>
                 </li>
                 <li>
-                  <a href="https://www.iloral-vision.com/" target = blank>Site sous CMS</a>
+                  <a href="iloralvision.mp4" target = blank>Site sous CMS</a>
                 </li>
                 <li>
                   <a href="signature.png"data-lightbox="gallery-mf">Création de signatures de mail</a>
@@ -180,9 +180,7 @@
                 <li>
                   <a href="en cours.png"data-lightbox="gallery-mf">Elaboration du cahier des charges</a>
                 </li>
-                <li>
-                  <a href="en cours.png"data-lightbox="gallery-mf">Faire des maquettes</a>
-                </li>
+                
                 <li>
                   <a href="https://total-valorisation.fr" target = blank >Réalisation du site</a>
                 </li>
