--- a/iloral.html
+++ b/iloral.html
@@ -185,7 +185,7 @@
                   <a href="https://total-valorisation.fr" target = blank >Réalisation du site</a>
                 </li>
                 <li>
-                  <a href="en cours.png"data-lightbox="gallery-mf">Création de signatures de mail</a>
+                  <a href="signaturetotal.jpeg"data-lightbox="gallery-mf">Création de signatures de mail</a>
                 </li>
               </ul>
             </div>
