--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <meta content="" name="description">
 
   <!-- Favicons -->
-  <link href="img/favicon.png" rel="icon">
-  <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="shanael.png" rel="icon">
+  <link href="shanael.png" rel="apple-touch-icon">
 
   <!-- Bootstrap CSS File -->
   <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -91,7 +91,7 @@
                 <div class="row">
                   <div class="col-sm-6 col-md-5">
                     <div class="about-img">
-                      <img src="en cours.png" class="img-fluid rounded b-shadow-a" alt=""> 
+                      <img src="Sans titre (8).png" class="img-fluid rounded b-shadow-a" alt=""> 
                     </div>
                   </div>
                   <div class="col-sm-6 col-md-7">
@@ -226,19 +226,19 @@
     <h2 class="timeline-title"> Formations</h2>
     <ol class="timeline-list">
       <li class="timeline-li">
-        <p class="diplome">Premiers secours</p>
-          <span class="point"></span>
-        <p class="description">Formation</p>
-      </li>
-      <li class="timeline-li">
         <p class="diplome">Bac S</p>
         <span class="point"></span>
         <p class="description">option mathematiques appliquées</p>
       </li>
+      <li class="timeline-li">
+        <p class="diplome">Premiers secours</p>
+          <span class="point"></span>
+        <p class="description">Formation</p>
+      </li>
        <li class="timeline-li">
         <p class="diplome">Mooc</p>
         <span class="point"></span>
-        <p class="description">Auto-formation Ansii RGPD</p>
+        <p class="description">Auto-formation Anssi et RGPD</p>
       </li>
       <li class="timeline-li">
         <p class="diplome">BTS SIO</p>
@@ -260,7 +260,7 @@
               Experiences
             </h3>
             <p class="subtitle-a">
-              Vous trouverez ci-joint les missions effectues durant mon stage ainsi que celles de mon alternace.
+              Vous trouverez ci-joint les missions effectuées durant mon stage ainsi que celles de mon alternace.
             </p>
             <div class="line-mf"></div>
           </div>
@@ -270,7 +270,7 @@
         <div class="col-md-6">
           <div class="card card-blog">
             <div class="card-img">
-              <a href="iloral.html"><img src="ilorzal.png".png" alt="" class="img-fluid"></a>
+              <a href="iloral.html"><img src="ilorzal.png" alt="" class="img-fluid"></a>
             </div>
             <div class="card-body">
               <div class="card-category-box">
