--- a/pardess.html
+++ b/pardess.html
@@ -134,7 +134,9 @@
           <div class="widget-sidebar widget-tags">
             <h5 class="sidebar-title">Conclusion</h5>
             <div class="sidebar-content">
-             
+              <p>
+                Mon alternace a ete benefique elle m'a permis de combiner la theorie a la pratique et de me faire aquerir d'autant plus de competence.
+              </p>
             </div>
           </div>
         </div>
