--- a/iloral.html
+++ b/iloral.html
@@ -178,7 +178,7 @@
                   <a >Dialoguer</a>
                 </li>
                 <li>
-                  <a href="en cours.png"data-lightbox="gallery-mf">Elaboration du cahier des charges</a>
+                  <a href="cahierdeschargetotal.pdf"data-lightbox="gallery-mf">Elaboration du cahier des charges</a>
                 </li>
                 
                 <li>
