--- a/iloral.html
+++ b/iloral.html
@@ -178,11 +178,11 @@
                   <a >Dialoguer</a>
                 </li>
                 <li>
-                  <a href="cahierdeschargetotal.pdf"data-lightbox="gallery-mf">Elaboration du cahier des charges</a>
+                  <a href="cahierdeschargetotal.pdf" target="blank">Elaboration du cahier des charges</a>
                 </li>
                 
                 <li>
-                  <a href="https://total-valorisation.fr" target = blank >Réalisation du site</a>
+                  <a href="https://total-valorisation.fr" target="blank" >Réalisation du site</a>
                 </li>
                 <li>
                   <a href="signaturetotal.jpeg"data-lightbox="gallery-mf">Création de signatures de mail</a>
