--- a/pardess.html
+++ b/pardess.html
@@ -80,7 +80,7 @@
   <!--/ Section Blog-Single Star /-->
   <section class="blog-wrapper sect-pt4" id="blog">
     <div class="container">
-      <div class="row">
+      <!--<div class="row">
             <div class="article-content"> 
               <div class="img-left">
               <img src="Pardess (3).png" alt="" class="img-stage">  
@@ -141,7 +141,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> /-->
   </section>
   <!--/ Section Blog-Single End /-->
 
