--- a/iloral.html
+++ b/iloral.html
@@ -198,13 +198,13 @@
               <ul>
                 <p> Le stage m’a permis de faire mes premiers pas dans le monde du travail. </p>
                 <li>
-                  <a >Premier point</a>
-                  <p> Sur le plan technique, j’ai découvert tout un écosystème informatique. J’ai particulièrement apprécié d’y utiliser de nouveaux logiciel notamment WordPress. Mais j'ai aussi dû faire face à différentes difficultés qui représentent aujourd’hui autant d’enseignements très importants pour moi, notamment : - l’enjeu du cahier des charges
+                  <a style="color: #74CDCE">Premier point</a>
+                  <p style="color: white"> Sur le plan technique, j’ai découvert tout un écosystème informatique. J’ai particulièrement apprécié d’y utiliser de nouveaux logiciel notamment WordPress. Mais j'ai aussi dû faire face à différentes difficultés qui représentent aujourd’hui autant d’enseignements très importants pour moi, notamment : - l’enjeu du cahier des charges
 -le rôle déterminant du chef du projet. </p>
                 </li>
                 <li>
-                  <a >Deuxieme point</a>
-                   <p> Enfin, ce stage m’a permis de gagner en maturité professionnelle et a renforcé mon souhait de poursuivre mes études avec si possible un pied dans l’entreprise, en alternance. </p>
+                  <a style="color: #74CDCE">Deuxieme point</a>
+                   <p style="color: white"> Enfin, ce stage m’a permis de gagner en maturité professionnelle et a renforcé mon souhait de poursuivre mes études avec si possible un pied dans l’entreprise, en alternance. </p>
                 </li>
               </ul>
             </div>
