--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                   </div>
                   <div class="col-sm-6 col-md-7">
                     <div class="about-info">
-                      <p><span class="title-s">Name: </span> <span>Shanaël Arzouan</span></p>
+                      <p><span class="title-s">Nom: </span> <span>Shanaël Arzouan</span></p>
                       <p><span class="title-s">Email: </span> <span>shanaelar@gmail.com</span></p>
                       <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="https://shanael25.github.io/portfolio1/certifications.pdf" target= "blank" role="button">Mes certifications</a></p>
                     </div>
