--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <div class="container">
           <p class="display-6 color-d">Bienvenue sur mon portfolio</p>
           <h1 class="intro-title mb-4">Shanaël Arzouan</h1>
-          <p class="intro-subtitle"><span class="text-slider-items">Curieuse,Passionnée,Perseverante,l'organisation,sont mes principales qualitées</span><strong class="text-slider"></strong></p>
+          <p class="intro-subtitle"><span class="text-slider-items">Curieuse,Passionnée,Perseverante,l'organisation,sont mes principales qualités</span><strong class="text-slider"></strong></p>
           <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
         </div>
       </div>
