--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <a class="nav-link js-scroll" href="#service">Competences</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll" href="#blog">Experience</a>
+            <a class="nav-link js-scroll" href="#blog">Experiences</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll" href="#work">Projets</a>
@@ -74,7 +74,7 @@
           <p class="display-6 color-d">Bienvenue sur mon portfolio</p>
           <h1 class="intro-title mb-4">Shanaël Arzouan</h1>
           <p class="intro-subtitle"><span class="text-slider-items">Curieuse,Passionnée,Perseverante,l'organisation,sont mes principales qualités</span><strong class="text-slider"></strong></p>
-          <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
+           <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">En savoir plus</a></p> 
         </div>
       </div>
     </div>
