--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
               Projets
             </h3>
             <p class="subtitle-a">
-              voici les projets que j'ai realise durant mes deux années en Bts sio
+              voici les projets que j'ai realisé durant mes deux années en BTS SIO
             </p>
             <div class="line-mf"></div>
           </div>
@@ -403,7 +403,7 @@
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <a href="https://github.com/ort-france/bts-alt-g1-2022" target = blank class="w-title">Symfony</h2>
+                    <h2 class="w-title">Symfony</h2>
                     <div class="w-more">
                       <span class="w-ctegory">Mr Foujols</span> / <span class="w-date">2 eme Année</span>
                     </div>
@@ -427,7 +427,7 @@
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <a href="https://github.com/IsaacLaifer/SIOALTGSB3" target = blank class="w-title">Java</a>
+                    <h2  class="w-title">Java</h2>
                     <div class="w-more">
                       <span class="w-ctegory">Mr Buffetau</span> / <span class="w-date">2eme année</span>
                     </div>
