--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                     Moi c’est Shanaël ARZOUAN, jeune étudiante de 20 ans en deuxième année de BTS SIO option SLAM.
                   </p>
                   <p class="lead">
-                    Mon projet professionnel est de devenir Webdesigner , après mes 2 ans d’études en BTS SIO, je compte ensuite faire un bachelor chef de projet e-business.
+                    Mon projet professionnel est de devenir Webdesigner , après mes 2 ans d’études en BTS SIO, je compte ensuite faire un Bachelor et MBA 1 : Chef de projet web-marketing et design web.
                   </p>
                   <p class="lead">
                   </p>
@@ -179,11 +179,11 @@
               <span class="ico-circle"><i class="ion-monitor"></i></span>
             </div>
             <div class="service-content">
-              <h2 class="s-title">Logiciel que j'utilise</h2>
+              <h2 class="s-title">Logiciel</h2>
               <ul>
-                <li>Office</li>
+                <li>Suite Office</li>
                 <li>Photoshop</li>
-                <li>VisualStudio code</li>
+                <li>VisualStudio Code</li>
               </ul>
             </div>
           </div>
@@ -194,32 +194,32 @@
   <!--/ Section Services End /-->
   <div class="section-counter paralax-mf bg-image" style="background-image: url(img/counters-bg.jpg)">
     <div class="overlay-mf"></div>
-    <h2 class="timeline-title"> Experience</h2>
+    <h2 class="timeline-title"> Expèriences</h2>
     <ol class="timeline-list">
       <li class="timeline-li">
         <p class="diplome">LILDVD</p>
           <span class="point"></span>
-        <p class="description">Propose et adapte les animations aux enfants. Prépare et réalise des animations en se donnant les moyensnécessaires à la réalisation des projets concertés</p></li>
+        <p class="description">Prépare et réalise des animations en se donnant les moyens nécessaires à la réalisation. Propose et adapte les animations aux enfants.</p></li>
       <li class="timeline-li">
       <p class="diplome">Beyahad</p>
         <span class="point"></span>
-        <p class="description">Propose et adapte les animations aux enfants. Prépare et réalise des animations en se donnant les moyensnécessaires à la réalisation des projets concertés</p>
+        <p class="description">Propose et adapte les animations aux enfants. Prépare et réalise des animations en se donnant les moyens nécessaires à la réalisation des projets. </p>
       </li>
        <li class="timeline-li">
         <p class="diplome">Ioral</p>
         <span class="point"></span>
-        <p class="description">Maintenance de site, creation de site, élaboration de cahier des charges et du mcd (modèle conceptuel des données)</p>
+        <p class="description">Maintenance de site, Création de site, Elaboration de cahier des charges et du MCD (Modèle Conceptuel des Données)</p>
       </li>
       <li class="timeline-li">
         <p class="diplome">La Mairie</p>
         <span class="point"></span>
-        <p class="description">Excellente communication aussi bien avec les clients qu'en interne.Reception de courrier et son classement</p>
+        <p class="description">Excellente communication aussi bien avec les clients qu'en interne. Reception de courrier et son classement</p>
       </li>
       <li class="timeline-li">
         <p class="diplome">Pardess</p>
         <span class="point"></span>
         <p class="description">
-          Maintenance du site ,gestion du stock.Creation app mobile
+          Maintenance du site, Gestion du stock. Creation app mobile
         </p>
       </li>
     </ol>
@@ -228,7 +228,7 @@
       <li class="timeline-li">
         <p class="diplome">Bac S</p>
         <span class="point"></span>
-        <p class="description">option mathematiques appliquées</p>
+        <p class="description">Option mathematiques appliquées</p>
       </li>
       <li class="timeline-li">
         <p class="diplome">Premiers secours</p>
@@ -280,7 +280,7 @@
               </div>
               <h3 class="card-title"><a href="iloral.html">Mon stage</a></h3>
               <p class="card-description">
-                ILORAL VISION, société par actions simplifiée est en activité depuis 6 ans. Domiciliée à NEUILLY-SUR-SEINE. 
+                ILORAL VISION, société par actions simplifiée est en activité depuis 6 ans. 
                 Serge DRAI est président de l'entreprise ILORAL VISION.
               </p>
             </div>
@@ -328,7 +328,7 @@
                 <p class="description lead">
                   Pour télécharger mon Tableau de Compétences Cliquez <a href="tableaudecompetenceshanael.pdf" download="CVshanael">Ici</a>
                 </p>
-                <p class ="description lead" > pour le voir </p>
+                <p class ="description lead" > Pour le voir </p>
                 <span class="comit"><a href="https://shanael25.github.io/portfolio1/tableaudecompetenceshanael.pdf" target="blank"><i class="fa fa-check" ></i></a></span>
               </div>
             </div>
@@ -339,9 +339,9 @@
               </div>
               <div class="content-test">
                 <p class="description lead">
-                  Pour télécharger mon cv Cliquez <a href="cvshanael.pdf" download="CVshanael">Ici</a>
+                  Pour télécharger mon CV Cliquez <a href="cvshanael.pdf" download="CVshanael">Ici</a>
                 </p>
-                <p class ="description lead" > pour le voir </p>
+                <p class ="description lead" > Pour le voir </p>
                 <span class="comit"><a href="https://shanael25.github.io/portfolio1/cvshanael.pdf" target="_blank"><i class="fa fa-check"></i></a></span>
               </div>
               
