--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     <div class="about-info">
                       <p><span class="title-s">Nom: </span> <span>Shanaël Arzouan</span></p>
                       <p><span class="title-s">Email: </span> <span>shanaelar@gmail.com</span></p>
-                      <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="https://shanael25.github.io/portfolio1/certifications.pdf" target= "blank" role="button">Mes certifications</a></p>
+                      <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="https://shanael25.github.io/portfolio1/certifications (2).pdf" target= "blank" role="button">Mes certifications</a></p>
                     </div>
                   </div>
                 </div>
@@ -114,7 +114,7 @@
                     Moi c’est Shanaël ARZOUAN, jeune étudiante de 20 ans en deuxième année de BTS SIO option SLAM.
                   </p>
                   <p class="lead">
-                    Mon projet professionnel est de devenir Webdesigner , après mes 2 ans d’études en BTS SIO, je compte ensuite faire un Bachelor et MBA 1 : Chef de projet web-marketing et design web.
+                    Mon projet professionnel est de devenir Webdesigner , après mes 2 ans d’études en BTS SIO, je compte ensuite faire un Bachelor : Chef de projet digital et design web.
                   </p>
                   <p class="lead">
                   </p>
