--- a/pardess.html
+++ b/pardess.html
@@ -121,14 +121,18 @@
                 </li>
                 <li>
                   <a href="#11">Creation d'une appplication mobile</a>
+                  
                 </li>
               </ul>
             </div>
           </div>
           <div class="widget-sidebar">
             <h3 id="9" class="sidebar-title"> <a href="https://pardess.eu" target="blank">Refonte du site</h3></a>
+            <p>Le site est CMS e-commerce PRESTASHOP</p>
             <h3 id="10" class="sidebar-title"><a href="StoreCommander (1).png" target="blank" >Maintenace du site</h3></a>
+            <p>Via un module integré à PrestaShop "StoreCommander"</p>
             <h3 id="11" class="sidebar-title"> <a href="maquettePardess.pdf" target="blank">Creation d'une appplication mobile</h3></a>
+            <p>L'application est realisée en ReactNative , avec l IDE atom ainsi que ExpoGo pour voir le rendu instantanément</p>
             
           </div>
           <div class="widget-sidebar widget-tags">
