--- a/pardess.html
+++ b/pardess.html
@@ -47,7 +47,7 @@
       <div class="navbar-collapse collapse justify-content-end" id="navbarDefault">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link js-scroll" href="index.html">Acceuil</a>
+            <a class="nav-link js-scroll" href="index.html">Accueil</a>
           </li>
         </ul>
       </div>
