--- a/iloral.html
+++ b/iloral.html
@@ -178,7 +178,7 @@
                   <a >Dialoguer</a>
                 </li>
                 <li>
-                  <a href="cahierdeschargetotal.pdf" target="blank">Elaboration du cahier des charges</a>
+                  <a href="https://midnight-vinyl-5cf.notion.site/Cahier-des-charges-f87e23530e584371aab7ca2a75920ae3" target="blank">Elaboration du cahier des charges</a>
                 </li>
                 
                 <li>
