--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
         </div>
         <div class="col-md-4">
           <div class="work-box">
-            <a href="rismedical.png" data-lightbox="gallery-mf">
+            <a href="symfonyDemo.gif" data-lightbox="gallery-mf">
               <div class="work-img">
                 <img src="symfony.png" alt="" class="img-fluid">
               </div>
@@ -416,7 +416,7 @@
         </div>
         <div class="col-md-4">
           <div class="work-box">
-            <a href="Java (1).png" data-lightbox="gallery-mf">
+            <a href="javaDemo.gif" data-lightbox="gallery-mf">
               <div class="work-img">
                 <img src="java.png" alt="" class="img-fluid">
               </div>
