--- a/index.html
+++ b/index.html
@@ -322,10 +322,10 @@
               </div>
               <div class="content-test">
                 <p class="description lead">
-                  Pour télécharger mon Tableau de Compétences Cliquez <a href="tableaudecompetenceshanael.pdf" download="CVshanael">Ici</a>
+                  Pour télécharger mon Tableau de Compétences Cliquez <a href="tabcompete.pdf" download="CVshanael">Ici</a>
                 </p>
                 <p class ="description lead" > Pour le voir </p>
-                <span class="comit"><a href="https://shanael25.github.io/portfolio1/tableaudecompetenceshanael.pdf" target="blank"><i class="fa fa-check" ></i></a></span>
+                <span class="comit"><a href="https://shanael25.github.io/portfolio1/tabcompete.pdf" target="blank"><i class="fa fa-check" ></i></a></span>
               </div>
             </div>
             <div class="testimonial-box">
