--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
               </div>
               <div class="content-test">
                 <p class="description lead">
-                  Pour télécharger mon Tableau de Compétences Cliquez <a href="tabcompete.pdf" download="CVshanael">Ici</a>
+                  Pour télécharger mon Tableau de Compétences Cliquez <a href="tabcompete.pdf" download="Tableau de Competences">Ici</a>
                 </p>
                 <p class ="description lead" > Pour le voir </p>
                 <span class="comit"><a href="https://shanael25.github.io/portfolio1/tabcompete.pdf" target="blank"><i class="fa fa-check" ></i></a></span>
