--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
                   Pour télécharger mon Tableau de Compétences Cliquez <a href="tabcompete.pdf" download="Tableau de Competences">Ici</a>
                 </p>
                 <p class ="description lead" > Pour le voir </p>
-                <span class="comit"><a href="https://shanael25.github.io/portfolio1/tabcompete.pdf" target="blank"><i class="fa fa-check" ></i></a></span>
+                <span class="comit"><a href="./tabcompete.pdf" target="blank"><i class="fa fa-check" ></i></a></span>
               </div>
             </div>
             <div class="testimonial-box">
