--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
               Projets
             </h3>
             <p class="subtitle-a">
-              voici les projets que j'ai realisé durant mes deux années en BTS SIO
+              Voici les projets que j'ai realisé durant mes deux années en BTS SIO
             </p>
             <div class="line-mf"></div>
           </div>
