--- a/pardess.html
+++ b/pardess.html
@@ -132,14 +132,14 @@
             <h3 id="10" class="sidebar-title"><a href="StoreCommander (1).png" target="blank" >Maintenace du site</h3></a>
             <p>Via un module integré à PrestaShop "StoreCommander"</p>
             <h3 id="11" class="sidebar-title"> <a href="maquettePardess.pdf" target="blank">Creation d'une appplication mobile</h3></a>
-            <p>L'application est realisée en ReactNative , avec l IDE atom ainsi que ExpoGo pour voir le rendu instantanément</p>
+            <p>L'application est realisée en ReactNative , avec l'IDE Atom ainsi que ExpoGo pour voir le rendu instantanément</p>
             
           </div>
           <div class="widget-sidebar widget-tags">
             <h5 class="sidebar-title">Conclusion</h5>
             <div class="sidebar-content">
               <p>
-                Mon alternace a ete benefique elle m'a permis de combiner la theorie a la pratique et de me faire aquerir d'autant plus de competence.
+                Mon alternace a été bénéfique. Elle m'a permis de combiner la théorie à la pratique et de me faire acquérir d'autant plus de competence.
               </p>
             </div>
           </div>
